# friends-watcher

./: .gitignore  README.md  index.html  package-lock.json  package.json
.ralphex/: config
docs/plans/: friends-watcher.md
docs/plans/completed/: friends-watcher.md
docs/plans/phase_1/: plan.md
scripts/: reset-state.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: avatars.rs  commands.rs  cookies.rs  db.rs  error.rs  instagram.rs  lib.rs  models.rs
src/components/: DiffBanner.tsx  RateLimitedBanner.tsx  RelationshipRow.tsx  SessionExpiredBanner.tsx  StatusEmpty.tsx
src/lib/: tauri.ts
src/views/: LoginView.tsx  MainView.tsx
